fix: reservasion overflow

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14882,7 +14882,7 @@ body {
 .inputs {
   width: 100%;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   gap: 20px;
   margin-block: 20px;
 }
@@ -14911,6 +14911,11 @@ body {
   .templat {
     flex-direction: row;
     gap: 30px;
+  }
+}
+@media (min-width: 720px) {
+  .inputs {
+    grid-template-columns: 1fr 1fr;
   }
 }
 .contactContain {
