--- a/src/sass/modules/home/reservasion.scss
+++ b/src/sass/modules/home/reservasion.scss
@@ -7,7 +7,7 @@
 {
     width: 100%;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr ;
     gap: 20px;
     margin-block: 20px;
     
@@ -42,5 +42,12 @@
     {
         flex-direction: row;
         gap: 30px;
+    }
+}
+
+@media (min-width:720px) {
+    .inputs
+    {
+        grid-template-columns: 1fr 1fr;
     }
 }
